2007-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-tech-on.el: Add coding cookie.
	(shimbun-multi-clear-contents): Remove tags that likely cause a newline
	preceding a page.
	(shimbun-clear-contents): Remove useless tags; insert line-break
	between text and image.

	* sb-itmedia.el (shimbun-multi-clear-contents): Remove tags that likely
	cause a newline preceding a page.

	* sb-nytimes.el (shimbun-clear-contents): Don't remove </blockquote> at
	the end of article; improve the way to remove next/prev buttons.

2007-10-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* sb-chalow.el: Removed by the bug report [emacs-w3m:09688].

2007-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-get-headers): Update regexp for m-magazine-ja.

2007-10-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkansports.el (shimbun-nikkansports-content-start): Improve.
	(shimbun-clear-contents): Remove consecutive CRs.

2007-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-clear-contents): Don't use unicode
	character directly in order to make this module loadable by XEmacs.

	* sb-ohmynews-jp.el (shimbun-clear-contents): Likewise.

2007-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-multi-next-url): Remove navigation button.
	(shimbun-multi-clear-contents): Add ^L; remove navigation buttons.
	(shimbun-footer): New method.

	* sb-ohmynews-jp.el: Don't use shimbun-japanese-newspaper.
	(shimbun-ohmynews-jp-content-start, shimbun-ohmynews-jp-content-end):
	Abolish.
	(shimbun-clear-contents): Rewrite.
	(shimbun-footer): New method.

	* sb-asahi.el (shimbun-asahi-prepare-article): Remove trailing garbage.

	* sb-nytimes.el (shimbun-clear-contents): Work with blog listing.

2007-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yahoo.el (shimbun-get-headers): Don't use pop unprincipledly.

	* sb-yomiuri.el: Require cl when compiling.

	* sb-tech-on.el: Use sb-multi.
	(shimbun-tech-on-group-table): Add some groups.